@@ -35,6 +35,42 @@
 	<artifactId>testng</artifactId>
 	<version>7.10.2</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>5.0.9</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.18.24</version> <!-- Use the latest stable Lombok version -->
+	    <scope>provided</scope>
+	</dependency>
+
+
 
   </dependencies>
+  
+	<build>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.11.0</version>
+	            <configuration>
+	                <source>11</source> <!-- or your JDK version -->
+	                <target>11</target>
+	                <compilerArgs>
+	                    <arg>--add-exports</arg>
+	                    <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+	                </compilerArgs>
+	            </configuration>
+	        </plugin>
+	    </plugins>
+</build>
+
+
 </project>
